--- a/sites/m/content/themes/h5/css/ecjia_city.css
+++ b/sites/m/content/themes/h5/css/ecjia_city.css
@@ -24,6 +24,11 @@ body .ecjia .ecjia-select .input100 {
     width: 100%
 }
 
+.swiper-container {
+    border-radius: .5rem;
+    margin: .5rem !important;
+}
+
 .input100 input {
     border-radius: 0;
     padding: 0 1em
@@ -1255,7 +1260,8 @@ ul {
 }
 
 .ecjia-row-nav.index {
-    padding: 0 .5em
+    border-radius: .8rem;
+    margin-top: .4rem;
 }
 
 .ecjia-row-nav li:nth-child(4n+1) {
@@ -1296,7 +1302,7 @@ ul {
 }
 
 .ecjia-row-nav.index {
-    padding-bottom: 0
+    padding-bottom: 1.5em;
 }
 
 
@@ -1311,7 +1317,9 @@ ul {
 
 .ecjia-mod .ecjia-adsense-model {
     height: auto;
-    background-color: #fff
+    background-color: #fff;
+    margin: .5rem;
+    border-radius: .8rem;
 }
 
 .ecjia-mod .ecjia-adsense-model .adsense-item {
@@ -1413,13 +1421,14 @@ ul {
 .ecjia-mod .head-title {
     border-top: 0;
     color: #FF5000;
-    background: #fff
+    background: #fff;
+    border-top-left-radius: .8rem;
+    border-top-right-radius: .8rem;
 }
 
 .ecjia-mod .head-title h2 {
     height: 2.4em;
     line-height: 2.4em;
-    border-bottom: 1px solid #eee;
     color: #555;
     font-size: 1.2em;
     font-weight: 400;
@@ -1471,7 +1480,9 @@ ul {
 
 .swiper-promotion {
     overflow: hidden;
-    background: #fff
+    background: #fff;
+    border-bottom-left-radius: .8rem;
+    border-bottom-right-radius: .8rem;
 }
 
 .swiper-promotion .swiper-slide {
@@ -1497,7 +1508,7 @@ ul {
     position: absolute;
     display: block;
     width: 100%;
-    font-size: .9em;
+    font-size: .8em;
     text-align: center;
     color: #e73938;
     line-height: 2em;
@@ -1506,16 +1517,50 @@ ul {
     bottom: 0
 }
 
-.ecjia-promotion-model .swiper-slide .list-page-goods-img .goods-img {
+.end-time {
+    color: #ff3434;
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: 1em;
+    background: #fff;
+}
+
+.end-times {
+    color: #fff;
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: 1em;
+    background: #333;
+}
+
+.ecjia-new-model .swiper-slide .list-page-goods-img .goods-img {
     display: block;
-    height: auto;
+    height: 0;
     overflow: hidden;
     margin: 0 auto;
-    position: relative
+    position: relative;
+    padding-bottom: 100%;
+    border: 1px solid #47aa4d;
+    border-radius: .5rem;
+}
+
+.ecjia-new-model .swiper-slide .list-page-goods-img .goods-img img {
+    max-width: 250px;
+}
+
+.ecjia-promotion-model .swiper-slide .list-page-goods-img .goods-img {
+    display: block;
+    height: 0;
+    overflow: hidden;
+    margin: 0 auto;
+    position: relative;
+    padding-bottom: 100%;
+    border: 1px solid #47aa4d;
+    border-radius: .5rem;
 }
 
 .ecjia-promotion-model .swiper-slide .list-page-goods-img .goods-img img {
-    max-width: 250px
+    max-width: 250px;
 }
 
 .ecjia-new-model a.list-page-goods-img .goods-name,
@@ -1532,6 +1577,14 @@ ul {
     text-align: left;
     font-weight: 400;
     color: #555
+}
+
+.self-label {
+    color: #ff3434;
+    border: 1px solid #ff3434;
+    border-radius: 4px;
+    font-size: .7em;
+    line-height: 1.4em;
 }
 
 .ecjia-promotion-model a.list-page-goods-img .goods-name .name-label {
@@ -1561,8 +1614,8 @@ ul {
 .ecjia-promotion-model img.sales-icon {
     position: absolute;
     width: 20%;
-    top: 0;
-    right: 0
+    top: .1rem;
+    right: .5rem;
 }
 
 /*促销商品 更多*/
@@ -1573,10 +1626,11 @@ ul {
 
 .ecjia-promotion-list li {
     background: #fff;
-    margin-top: 1em;
     position: relative;
-    border-top-left-radius: .3em;
-    border-top-right-radius: .3em
+    border-radius: .3em;
+    width: 50%;
+    float: left;
+    padding: 1px;
 }
 
 .ecjia-promotion-list li:first-child {
@@ -1584,22 +1638,23 @@ ul {
 }
 
 .ecjia-promotion-list img.sales-icon {
-    width: 10%
+    width: 20%
 }
 
 .ecjia-promotion-list .list-page-goods-img .goods-img {
     display: block;
-    height: auto;
+    height: 0;
     overflow: hidden;
     margin: 0 auto;
-    position: relative
+    position: relative;
+    padding-bottom: 100%;
 }
 
 .ecjia-promotion-list .promote-time {
     position: absolute;
     display: block;
     width: 100%;
-    font-size: 1em;
+    font-size: .9em;
     text-align: center;
     color: #e73938;
     height: 2.8em;
@@ -1620,21 +1675,20 @@ ul {
 .ecjia-promotion-list .list-page-goods-img .goods-img img {
     width: 100%;
     border-top-left-radius: .3em;
-    border-top-right-radius: .3em
+    border-top-right-radius: .3em;
 }
 
 .ecjia-promotion-list .promote-time .end-time {
     color: #ff3434;
     border-radius: 4px;
-    font-weight: 400;
+    font-weight: bold;
     font-size: 1.2em;
     background: #fff;
-    padding: .2em
 }
 
 /*新品推荐 更多*/
 .ecjia-new-goods .goods-img img {
-    width: 98%;
+    width: 100%;
     display: block;
     margin: 0 auto;
     border: none
@@ -1654,9 +1708,20 @@ ul {
     font-size: .8em;
     color: #47aa4d;
     background-color: #F0F0F0;
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
     font-weight: 400
+}
+
+.manage_mode {
+    color: #ff3434;
+    border: 1px solid #ff3434;
+    border-radius: 4px;
+    margin-left: .5em;
+    font-size: .9em;
+    display: inline-block;
+    line-height: 1em;
+    padding: 2px;
 }
 
 .ecjia-new-goods .icon-shop {
@@ -1692,7 +1757,7 @@ ul {
     border-bottom: none;
     padding: 0 0 .4em 0;
     margin: 0 1% .3em 1.5%;
-    border-radius: 4px;
+    border-radius: .4rem;
     height: auto
 }
 
@@ -1754,7 +1819,7 @@ footer {
 }
 
 .ecjia-padding-b1 {
-    padding-bottom: 1em
+    margin: .5rem;
 }
 
 .ecjia-placeholder {
@@ -2714,7 +2779,8 @@ footer {
     height: 5em;
     display: inline-block;
     float: left;
-    border: 1px solid #eee
+    border: 1px solid #47aa4d;
+    border-radius: .4rem;
 }
 
 .ecjia-store-goods .r2 dl {
@@ -3910,9 +3976,6 @@ footer {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center
-}
-
-.ecjia .ecjia-checkout .checklist .pay_title {
 }
 
 .ecjia .ecjia-checkout .checklist .ecjia-select-pay {
@@ -6477,8 +6540,7 @@ footer {
 }
 
 .goods-info .ecjia-left-time {
-    border: 1px solid #ff3434;
-    width: 82%;
+    width: 100%;
     height: 1.3em;
     margin-top: 10px;
     display: -webkit-box;
@@ -6496,9 +6558,9 @@ footer {
 }
 
 .goods-info .ecjia-left-time .detail-clock-icon {
-    width: 1.3em;
+    /*width: 1.3em;
     height: 1.3em;
-    background: url(../images/icon/goods-detail-colok.png);
+    background: url(../images/icon/goods-detail-colok.png);*/
     position: absolute;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -6522,7 +6584,6 @@ footer {
 .goods-info .ecjia-left-time .goods-detail-promote {
     height: 1.5em;
     font-size: .7em;
-    margin-left: 2em;
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -6535,7 +6596,6 @@ footer {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    width: 100%
 }
 
 .goods-info .ecjia-left-time .iconfont {
@@ -6546,8 +6606,6 @@ footer {
 }
 
 .goods-info .goods-price-new .ecjia-left-time span {
-    background-color: #fff;
-    color: #ff3434;
     overflow: hidden
 }
 
@@ -6644,7 +6702,7 @@ footer {
 }
 
 .goods-info .address-warehouse-new {
-    padding: 0
+    padding: .5rem
 }
 
 .goods-info .goods-info-property {
@@ -6652,7 +6710,7 @@ footer {
 }
 
 .ecjia-form .may-like {
-    color: #ff3434;
+    color: #555;
     font-size: 1.1em
 }
 
@@ -6668,6 +6726,17 @@ footer {
     height: auto;
     margin: .5em 0 .3em 1.1%;
     border: none
+}
+
+.like-goods-img {
+    display: block;
+    height: 0;
+    overflow: hidden;
+    margin: 0 auto;
+    position: relative;
+    padding-bottom: 100%;
+    border: 1px solid #47aa4d;
+    border-radius: .5rem;
 }
 
 .ecjia-like-goods-list li .link-goods-price {
@@ -6705,8 +6774,7 @@ footer {
 }
 
 .ecjia-like-goods-list li img {
-    border: .5px solid #eee;
-    width: 100%
+    width: 100%;
 }
 
 .ecjia-goods-name-new {
@@ -6793,7 +6861,8 @@ footer {
 }
 
 .goods-describe img {
-    width: 100%
+    width: 100%;
+    vertical-align: bottom;
 }
 
 .goods-describe tr {
@@ -8290,7 +8359,9 @@ footer {
     width: 3em;
     height: 3em;
     overflow: hidden;
-    float: left
+    float: left;
+    border-radius: .4rem;
+    border: 1px solid #47aa4d;
 }
 
 .ecjia-store-list .store-goods li.goods-info .goods-image img {
@@ -9484,7 +9555,9 @@ footer {
     height: auto;
     overflow: hidden;
     clear: both;
-    background-color: #f7f7f7
+    background-color: #f7f7f7;
+    border-radius: .8rem;
+    margin: .5rem;
 }
 
 .ecjia-store-comment .ecjia-seller-comment {
@@ -10032,7 +10105,7 @@ footer {
     overflow: hidden;
     float: left;
     border-radius: 4px;
-    border: 1px solid #ddd;
+    border: 1px solid #47aa4d;
     margin-bottom: .5em;
     margin-top: .2em
 }
@@ -13886,8 +13959,8 @@ body,
 }
 
 .ecjia-groupbuy-list li .goods-img img {
-    width: 8em;
-    height: 8em
+    width: 10em;
+    height: 10em
 }
 
 .ecjia-groupbuy-list li .goods-img .promote-time {
@@ -13907,7 +13980,8 @@ body,
     position: absolute;
     width: 2em;
     height: 2em;
-    left: 0
+    left: 0;
+    top: 0;
 }
 
 .ecjia-groupbuy-list .list-page-box {
@@ -13923,7 +13997,6 @@ body,
     flex-direction: column;
     justify-content: space-between;
     margin-left: 10em;
-    height: 10em
 }
 
 .ecjia-groupbuy-list .list-page-box .goods-name {
@@ -13946,8 +14019,19 @@ body,
     font-size: 1.1em
 }
 
+.ecjia-groupbuy-list .merchants-name {
+    margin-top: .5em;
+}
+
+.ecjia-groupbuy-list .merchants-name .icon-shop {
+    font-size: 1.1em;
+    padding-right: .2em;
+    top: 0;
+}
+
 .ecjia-groupbuy-list .list-page-goods-price {
-    position: relative
+    position: relative;
+    margin-top: 4em;
 }
 
 .ecjia-groupbuy-list li a.btn {
