--- a/content/apps/orders/statics/css/admin_orders.css
+++ b/content/apps/orders/statics/css/admin_orders.css
@@ -1,287 +1,287 @@
 #general_loading {
-	width: 100%;
-	height: 600px;
-	line-height: 500px;
-	text-align: center;
-	overflow: hidden;
-	display: none;
+    width: 100%;
+    height: 600px;
+    line-height: 500px;
+    text-align: center;
+    overflow: hidden;
+    display: none;
 }
 
 #general_data {
-	height: 600px;
-	width: 90%;
-	margin: 0 auto;
+    height: 600px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #general_datas {
-	height: 600px;
-	width: 90%;
-	margin: 0 auto;
+    height: 600px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 #area_loading {
-	width: 600px;
-	height: 350px;
-	line-height: 300px;
-	text-align: center;
-	overflow: hidden;
-	display: none;
+    width: 600px;
+    height: 350px;
+    line-height: 300px;
+    text-align: center;
+    overflow: hidden;
+    display: none;
 }
 
 .area_data {
-	width: 780px;
-	height: 350px;
-	margin: 0 auto;
+    width: 780px;
+    height: 350px;
+    margin: 0 auto;
 }
 
 #area_data {
-	float: left;
-	height: 300px;
-	width: 450px;
-	margin-left: 50px;
+    float: left;
+    height: 300px;
+    width: 450px;
+    margin-left: 50px;
 }
 
 #area_legend {
-	float: left;
-	width: 200px;
-	height: auto;
+    float: left;
+    width: 200px;
+    height: auto;
 }
 
 #from_loading {
-	width: 600px;
-	height: 350px;
-	line-height: 300px;
-	text-align: center;
-	overflow: hidden;
-	display: none;
+    width: 600px;
+    height: 350px;
+    line-height: 300px;
+    text-align: center;
+    overflow: hidden;
+    display: none;
 }
 
 .from_data {
-	width: 750px;
-	height: 350px;
-	margin: 0 auto;
+    width: 750px;
+    height: 350px;
+    margin: 0 auto;
 }
 
 #from_data {
-	float: left;
-	height: 300px;
-	width: 450px;
-	margin-left: 50px;
+    float: left;
+    height: 300px;
+    width: 450px;
+    margin-left: 50px;
 }
 
 #from_legend {
-	float: left;
-	width: auto;
-	height: auto;
+    float: left;
+    width: auto;
+    height: auto;
 }
 
 .order_general {
-	width: 100%;
-	height: 500px;
-	margin: 0 auto;
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
 }
 
 #order_general {
-	height: 500px;
-	width: 100%;
-	margin: 0 auto;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .order_status {
-	width: 100%;
-	height: 500px;
-	margin: 0 auto;
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
 }
 
 #order_status {
-	height: 500px;
-	width: 100%;
-	margin: 0 auto;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .ship_status {
-	width: 100%;
-	height: 500px;
-	margin: 0 auto;
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
 }
 
 #ship_status {
-	height: 500px;
-	width: 100%;
-	margin: 0 auto;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .ship_stats {
-	width: 100%;
-	height: 500px;
-	margin: 0 auto;
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
 }
 
 #ship_stats {
-	height: 500px;
-	width: 100%;
-	margin: 0 auto;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .pay_status {
-	width: 100%;
-	height: 500px;
-	margin: 0 auto;
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
 }
 
 #pay_status {
-	height: 500px;
-	width: 100%;
-	margin: 0 auto;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .pay_stats {
-	height: 500px;
-	width: 100%;
-	margin: 0 auto;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 #pay_stats {
-	height: 500px;
-	width: 100%;
-	margin: 0 auto;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 #order_count {
-	height: 580px;
-	width: 100%;
-	margin: 0 auto;
+    height: 580px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 #order_amount {
-	height: 580px;
-	width: 100%;
-	margin: 0 auto;
+    height: 580px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 #salecount {
-	height: 600px;
-	width: 100%;
-	margin: 0 auto;
+    height: 600px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .order-status-base {
-	text-algin: center;
+    text-algin: center;
 }
 
 .order-status-base ul {
-	margin: 0px auto;
-	overflow: hidden;
-	padding: 0;
+    margin: 0px auto;
+    overflow: hidden;
+    padding: 0;
 }
 
 .order-status-base ul li {
-	list-style: none;
-	margin-left: 0 !important;
-	text-align: center;
-	width: 24.11111%;
-	float: left;
+    list-style: none;
+    margin-left: 0 !important;
+    text-align: center;
+    width: 24.11111%;
+    float: left;
 }
 
 .order-status-base.order-five-base ul li {
-	width: 20%;
+    width: 20%;
 }
 
 .order-status-base.order-third-base ul li {
-	width: 33.11111%;
+    width: 33.11111%;
 }
 
 .order-status-base .step-no {
-	margin-top: 10px;
-	color: #fff;
-	font-size: 18px;
-	height: 34px;
-	line-height: 34px;
-	background: url("../images/order-time-base.png") no-repeat scroll 50% -102px;
+    margin-top: 10px;
+    color: #fff;
+    font-size: 18px;
+    height: 34px;
+    line-height: 34px;
+    background: url("../images/order-time-base.png") no-repeat scroll 50% -102px;
 }
 
 .order-status-base .step-first .step-done .step-no {
-	background-position: 50% -204px;
+    background-position: 50% -204px;
 }
 
 .order-status-base .step-first .step-cur .step-no {
-	background-position: 50% -34px;
+    background-position: 50% -34px;
 }
 
 .order-status-base .step-done .step-no {
-	background-position: 50% -170px;
+    background-position: 50% -170px;
 }
 
 .order-status-base .step-cur .step-no {
-	background-position: 50% 0;
+    background-position: 50% 0;
 }
 
 .order-status-base .step-pay .step-no {
-	background-position: 50% -102px;
+    background-position: 50% -102px;
 }
 
 .order-status-base .step-last .step-no {
-	background-position: 50% -136px;
+    background-position: 50% -136px;
 }
 
 .order-status-base .step-last .step-cur .step-no {
-	background-position: 50% -68px;
+    background-position: 50% -68px;
 }
 
 .groupbuy-icon {
-	background-color: #E95454;
-	color: #fff;
-	padding: 2px;
-	border-radius: 4px;
-	margin-left: 2px;
+    background-color: #E95454;
+    color: #fff;
+    padding: 2px;
+    border-radius: 4px;
+    margin-left: 2px;
 }
 
 .ecjia-order-search.display-none {
-	display: none;
+    display: none;
 }
 
 .search-form.form-horizontal {
-	background-color: #F6F6F7;
-	padding: 25px 0px 11px 0;
-	margin: 0;
-	margin-bottom: 18px;
-	border-radius: 5px;
-	height: 220px;
+    background-color: #F6F6F7;
+    padding: 25px 0px 11px 0;
+    margin: 0;
+    margin-bottom: 18px;
+    border-radius: 5px;
+    height: 220px;
 }
 
 .search-form.form-horizontal .control-label {
-	width: 100px;
+    width: 100px;
 }
 
 .w165 {
-	width: 165px;
+    width: 165px;
 }
 
 .search-form.form-horizontal .controls {
-	margin-left: 120px;
+    margin-left: 120px;
 }
 
 .search-form.form-horizontal .search-item {
-	float: left;
-	width: 100%;
-	margin: 0;
+    float: left;
+    width: 100%;
+    margin: 0;
 }
 
 .search-form.form-horizontal .search-item .item {
-	float: left;
-	width: 300px;
+    float: left;
+    width: 300px;
 }
 
 .search-form.form-horizontal .search-item .item.w350 {
-	width: 350px;
+    width: 350px;
 }
 
 .search-form.form-horizontal .search-item .item.w520 {
-	width: 520px;
+    width: 520px;
 }
 
 .ecjia-order-amount .item {
-	width: 15%;
+    width: 15%;
     height: 100px;
     float: left;
     background-color: #F6F8F8;
@@ -292,42 +292,146 @@
 }
 
 .ecjia-order-amount .item:nth-child(6) {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .ecjia-order-amount .item .price {
-	font-size: 20px;
+    font-size: 20px;
     max-width: 90%;
     overflow: hidden;
     color: #ff3434;
     text-overflow: ellipsis;
-	white-space: nowrap;
+    white-space: nowrap;
 }
 
 .ecjia-order-amount .item .type {
-	font-size: 15px;
-	margin-top: 20px;
+    font-size: 15px;
+    margin-top: 20px;
 }
 
 .badge.badge-groupbuy-underway {
-	background-color: #3a99d8;
+    background-color: #3a99d8;
 }
+
 .badge.badge-groupbuy-finished {
-	background-color: #c1c1c1;
+    background-color: #c1c1c1;
 }
+
 .badge.badge-groupbuy-success {
-	background-color: #28b294;
+    background-color: #28b294;
 }
+
 .badge.badge-groupbuy-fail {
-	background-color: #eb5768;
+    background-color: #eb5768;
 }
 
 .order_stats {
-	width: 100%;
-	height: 400px;
+    width: 100%;
+    height: 400px;
 }
 
 #order_stats {
-	height: 400px;
-	width: 100%;
+    height: 400px;
+    width: 100%;
+}
+
+.order_userinfo_modal .modal {
+    width: 930px;
+    margin-left: -350px;
+    margin-top: 10px;
+}
+
+.order_userinfo_modal .modal .user-info {
+    width: 100%;
+    height: 370px;
+    padding: 0 20px;
+}
+
+.order_userinfo_modal .modal .user-info .basic-info {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+    position: relative;
+}
+
+.order_userinfo_modal .modal .user-info .basic-info img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    float: left;
+}
+
+.order_userinfo_modal .modal .user-info .basic-info .detail {
+    float: left;
+    margin-left: 20px;
+    padding-top: 5px;
+}
+
+.order_userinfo_modal .modal .user-info .basic-info .detail .name {
+    font-size: 15px;
+}
+
+.order_userinfo_modal .modal .user-info .basic-info .detail .rank_name {
+    margin-left: 20px;
+    background-color: #F2740C;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.order_userinfo_modal .modal .user-info .basic-info .view-detail {
+    position: absolute;
+    right: 0;
+    bottom: 20px;
+}
+
+.order_userinfo_modal .modal .user-info .user-money {
+    overflow: hidden;
+    padding: 30px 0;
+    background-color: #f7f7f7;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.order_userinfo_modal .modal .user-info .user-money .item {
+    width: 25%;
+    float: left;
+    text-align: center;
+    font-size: 15px;
+}
+
+.order_userinfo_modal .modal .user-info .user-address {
+    overflow: hidden;
+}
+
+.order_userinfo_modal .modal .user-info .user-address .address-title {
+    font-size: 15px;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.order_userinfo_modal .modal .user-info .user-address .address-content .address-item {
+    width: 28.4%;
+    float: left;
+    border: 1px dashed #ddd;
+    margin-right: 1%;
+    padding: 2%;
+    margin-bottom: 10px;
+}
+
+.order_userinfo_modal .modal .user-info .user-address .address-content .address-item:nth-child(3n) {
+    margin-right: 0;
+}
+
+.order_userinfo_modal .modal .user-info .user-address .address-content .address-item .address_info {
+    height: 36px;
+    white-space: normal;
+    overflow: hidden;
+    -ms-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+}
+
+.order_userinfo_modal .modal .user-info .user-address .address-content .no-records {
+    height: 120px;
+    line-height: 120px;
+    text-align: center;
 }
