--- a/content/apps/withdraw/statics/css/admin.css
+++ b/content/apps/withdraw/statics/css/admin.css
@@ -1,54 +1,145 @@
 .order-status-base {
-	text-algin: center;
+    text-algin: center;
 }
 
 .order-status-base ul {
-	margin: 0px auto;
-	overflow: hidden;
-	padding: 0;
+    margin: 0px auto;
+    overflow: hidden;
+    padding: 0;
 }
 
 .order-status-base ul li {
-	list-style: none;
-	margin-left: 0 !important;
-	text-align: center;
-	width: 33.11111%;
-	float: left;
+    list-style: none;
+    margin-left: 0 !important;
+    text-align: center;
+    width: 33.11111%;
+    float: left;
 }
 
 .order-status-base .step-no {
-	margin-top: 10px;
-	color: #fff;
-	font-size: 18px;
-	height: 34px;
-	line-height: 34px;
-	background: url("../images/order-time-base-admin.png") no-repeat scroll 50% -102px;
+    margin-top: 10px;
+    color: #fff;
+    font-size: 18px;
+    height: 34px;
+    line-height: 34px;
+    background: url("../images/order-time-base-admin.png") no-repeat scroll 50% -102px;
 }
 
 .order-status-base .step-first .step-done .step-no {
-	background-position: 50% -204px;
+    background-position: 50% -204px;
 }
 
 .order-status-base .step-first .step-cur .step-no {
-	background-position: 50% -34px;
+    background-position: 50% -34px;
 }
 
 .order-status-base .step-done .step-no {
-	background-position: 50% -170px;
+    background-position: 50% -170px;
 }
 
 .order-status-base .step-cur .step-no {
-	background-position: 50% 0;
+    background-position: 50% 0;
 }
 
 .order-status-base .step-last .step-no {
-	background-position: 50% -136px;
+    background-position: 50% -136px;
 }
 
 .order-status-base .step-last .step-cur .step-no {
-	background-position: 50% -68px;
+    background-position: 50% -68px;
 }
 
 .control-group-user .wechat_nickname {
-	padding: 5px 2px;
+    padding: 5px 2px;
+}
+
+.withdraw_card_content {
+    position: relative;
+    color: #fff;
+}
+
+.withdraw_card_content a {
+    color: #fff;
+}
+
+.withdraw_card_info {
+    width: 400px;
+    min-height: 230px;
+    margin-left: 50px;
+    position: absolute;
+    right: 10px;
+    border-radius: 5px;
+    background-image: url(../images/bank_card.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    font-size: 14px;
+    height: auto;
+}
+
+.withdraw_card_info .user-info {
+    margin: 20px 20px 10px 20px;
+    height: 80px;
+    border-bottom: 1px dashed #eee;
+}
+
+.withdraw_card_info .user-info .left {
+    float: left;
+}
+
+.withdraw_card_info .user-info .left img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    float: left;
+}
+
+.withdraw_card_info .user-info .left .info {
+    padding-left: 10px;
+    float: left;
+}
+
+.withdraw_card_info .user-info .left .info div {
+    margin-bottom: 10px;
+}
+
+.withdraw_card_info .user-info .left .info .name {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 5px;
+}
+
+.withdraw_card_info .user-info .right {
+    float: right;
+    margin: 20px 20px 0 0;
+}
+
+.withdraw_card_info .user-info .right span {
+    background-color: #4D5886;
+    padding: 6px 10px;
+    border-radius: 5px;
+}
+
+.withdraw_card_info .card-info {
+    margin: 0 20px;
+    line-height: 32px;
+}
+
+.withdraw_card_info .card-info .item .left {
+    float: left;
+    width: 100px;
+    text-align: right;
+}
+
+.withdraw_card_info .card-info .item .right {
+    display: inline-block;
+    padding-left: 10px;
+    margin-left: 0;
+}
+
+.withdraw_card_info .card-info .right img {
+    margin-right: 5px;
+}
+
+.withdraw_card_info .card-info .item:last-child {
+    margin-bottom: 10px;
 }
