更新H5主题模板

--- a/sites/m/content/themes/h5/css/ecjia_city.css
+++ b/sites/m/content/themes/h5/css/ecjia_city.css
@@ -1178,6 +1178,11 @@ ul {
     right: .5em
 }
 
+.search-no-pro {
+    overflow: hidden;
+    min-height: 306px;
+}
+
 .search-no-pro .ecjia-nolist {
     padding-top: 180px;
     min-height: 306px;
@@ -1189,7 +1194,9 @@ ul {
     bottom: 0;
     top: 0;
     right: 0;
-    background: #f7f7f7
+    background: #f7f7f7;
+    max-width: 640px;
+    margin: 0 auto;
 }
 
 .search-no-pro .ecjia-nolist img {
@@ -15068,3 +15075,200 @@ body,
     font-size: 1.2em;
 }
 
+.ecjia-reward-team .reward-team-top {
+    background-color: #fff;
+    margin-top: 1em;
+    text-align: center;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
+
+.ecjia-reward-team .reward-team-top .total-num {
+    padding: 2em 0 1em 0;
+    font-size: 1.2em;
+}
+
+.ecjia-reward-team .reward-team-top .number {
+    padding-bottom: 3em;
+    font-size: 1.2em;
+    color: #FF2500;
+}
+
+.ecjia-reward-team .team-item .search-no-pro .ecjia-nolist {
+    padding-top: 100px;
+}
+
+.reward-team-bottom .bottom-hd {
+    line-height: 3em;
+    padding-left: 1em;
+    border-bottom: 1px solid #eee;
+}
+
+.reward-team-bottom .team-item {
+    overflow: hidden;
+    position: relative;
+    height: auto;
+    background-color: #fff;
+}
+
+.reward-team-bottom .team-item .team-item-li {
+    overflow: hidden;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    position: relative;
+    margin: 1em 0 0 1em;
+}
+
+.reward-team-bottom .team-item .team-item-li:first-child {
+    padding-top: 0;
+}
+
+.reward-team-bottom .team-item .team-item-li:last-child {
+    border-bottom: none;
+}
+
+.reward-team-bottom .team-item .team-img img {
+    height: 4em;
+    width: 4em;
+    border-radius: 50%;
+}
+
+.reward-team-bottom .team-item .team-right {
+    margin-left: 5em;
+}
+
+.reward-team-bottom .team-item .name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-top: .3em;
+}
+
+.reward-team-bottom .team-item .block {
+    color: #838383;
+    margin-top: .5em;
+    font-size: .9em;
+}
+
+.reward-team-bottom .team-item .next-user {
+    position: absolute;
+    right: 1em;
+    top: 2em;
+    border: 1px solid #eee;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+.reward-team-bottom .team-item .team-item-li:first-child .next-user {
+    top: 1em;
+}
+
+.ecjia-category-goods-tab {
+    top: 3.2em;
+    position: fixed;
+    height: 3em;
+    max-width: 640px;
+    width: 100%;
+    background-color: #fff;
+    line-height: 2em;
+    font-size: 1.1em;
+    color: #666;
+    z-index: 5;
+    border-bottom: 1px solid #eee;
+}
+
+.ecjia-category-goods-tab li {
+    float: left;
+    width: 33.3%;
+    border-bottom: 0;
+    text-align: center;
+    padding-top: .5em;
+}
+
+.ecjia-category-goods-tab li span.active {
+    display: inline-block;
+    width: 100%;
+    padding-bottom: .4em;
+    border-bottom: 2px solid #47aa4d;
+    color: #47aa4d;
+}
+
+.ecjia-category-goods-ul {
+    margin-top: 7.5em;
+    margin-bottom: 1em;
+}
+
+.ecjia-category-goods-ul li {
+    float: left;
+    width: 48%;
+    text-align: left;
+    border-bottom: none;
+    padding: 0 0 .4em 0;
+    margin: 0 1% .3em 1.5%;
+    border-radius: .4rem;
+    height: auto
+}
+
+.ecjia-category-goods-ul li:nth-of-type(2n) {
+    margin-left: 0;
+    border-left: 0
+}
+
+.ecjia-category-goods-ul li .goods-img {
+    display: block;
+    height: 0;
+    padding-bottom: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.ecjia-category-goods-ul li .goods-img img {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    border: none;
+}
+
+.ecjia-category-goods-ul li .merchants-name {
+    height: 2em;
+    line-height: 2em;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: .8em;
+    color: #47aa4d;
+    background-color: #F0F0F0;
+    width: 100%;
+    margin: 0 auto;
+    font-weight: 400;
+}
+
+.ecjia-category-goods-ul li .icon-shop {
+    font-size: 1.1em;
+    padding: 0 .2em;
+    top: 0;
+}
+
+.ecjia-category-goods-ul li .goods-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    height: 3em;
+    white-space: pre-line;
+    font-weight: 400;
+    color: #555;
+    font-size: 1em;
+    margin-top: .3em;
+    padding: 0 .5em 0 .5em;
+}
+
+.ecjia-category-goods-ul .list-page-goods-price span {
+    display: block;
+    margin: .5em 0 0 .5em;
+    color: #ff3434;
+    font-size: 1.1em;
+}
